--- a/main.html
+++ b/main.html
@@ -8,6 +8,30 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <div class="container">
+
+        <div class="imageContainer">
+            <img src="example-image.jpg" alt="Architecture Overview">
+        </div>
+
+        <table>
+            <tr>
+                <th>Image</th>
+                <th>Text Content</th>
+                <th>Image</th>
+            </tr>
+            <tr>
+                <td><img src="example-image1.jpg" alt="Column 1 Image"></td>
+                <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum sapien id urna auctor, nec vulputate ligula venenatis.</td>
+                <td><img src="example-image2.jpg" alt="Column 3 Image"></td>
+            </tr>
+            <tr>
+                <td><img src="example-image3.jpg" alt="Column 1 Image"></td>
+                <td>Suspendisse potenti. Phasellus non diam ac mi consequat luctus. Nulla facilisi.</td>
+                <td><img src="example-image4.jpg" alt="Column 3 Image"></td>
+            </tr>
+        </table>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
