--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	 <div class="container">
 
         <div class="imageContainer">
-            <img src="example-image.jpg" alt="Architecture Overview">
+            <img src="https://storage.googleapis.com/acciojob-open-file-collections/5c751d10-50b1-4ef7-887a-ee69223c7c53_Screenshot%202023-08-16%20at%2012.56.13%20AM.png" alt="Architecture Overview">
         </div>
 
         <table>
