--- a/main.html
+++ b/main.html
@@ -15,12 +15,15 @@
         </div>
 
         <table>
-            <tr>
+			<thead>
+			<tr>
                 <th>Image</th>
                 <th>Text Content</th>
                 <th>Image</th>
             </tr>
-            <tr>
+			</thead>
+			<tbody>
+				<tr>
                 <td><img src="https://res.cloudinary.com/dzdgpwtox/image/upload/w_450,c_scale,f_auto/v1615660829/final_designs/seller_design_152537/f_20210313184028.png" alt="Column 1 Image"></td>
                 <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum sapien id urna auctor, nec vulputate ligula venenatis.</td>
                 <td><img src="https://res.cloudinary.com/dzdgpwtox/image/upload/w_450,c_scale,f_auto/v1615660829/final_designs/seller_design_152537/f_20210313184028.png" alt="Column 3 Image"></td>
@@ -31,6 +34,7 @@
                 <td>Suspendisse potenti. Phasellus non diam ac mi consequat luctus. Nulla facilisi.</td>
                 <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTKiWFpUjJ-3QoYqaU4hFLPgOIp1qH_GohIA&s" alt="Column 3 Image"></td>
             </tr>
+			</tbody>
         </table>
     </div>
     <script type="text/javascript" src="./script.js">
