--- a/main.html
+++ b/main.html
@@ -16,19 +16,22 @@
         <table>
 			<thead>
 			<tr>
-                <th>Image</th>
-                <th>Text Content</th>
-                <th>Image</th>
+				<th>Row</th>
+                <th>First Column (Width: 200)</th>
+                <th>Middle Column (Width: 600)</th>
+                <th>Last Column (Width: 200)</th>
             </tr>
 			</thead>
 			<tbody>
 			<tr>
+				<td>1</td>
                 <td><img src="https://res.cloudinary.com/dzdgpwtox/image/upload/w_450,c_scale,f_auto/v1615660829/final_designs/seller_design_152537/f_20210313184028.png" alt="Column 1 Image"></td>
                 <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum sapien id urna auctor, nec vulputate ligula venenatis.</td>
                 <td><img src="https://res.cloudinary.com/dzdgpwtox/image/upload/w_450,c_scale,f_auto/v1615660829/final_designs/seller_design_152537/f_20210313184028.png" alt="Column 3 Image"></td>
             </tr>
 			
             <tr>
+				<td>2</td>
                 <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTKiWFpUjJ-3QoYqaU4hFLPgOIp1qH_GohIA&s" alt="Column 1 Image"></td>
                 <td>Suspendisse potenti. Phasellus non diam ac mi consequat luctus. Nulla facilisi.</td>
                 <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTKiWFpUjJ-3QoYqaU4hFLPgOIp1qH_GohIA&s" alt="Column 3 Image"></td>
