--- a/main.html
+++ b/main.html
@@ -9,34 +9,23 @@
 <body>
 	<!-- the entire body must be written by student -->
 	 <div class="container">
-        <div class="imageContainer">
-            <img src="https://storage.googleapis.com/acciojob-open-file-collections/5c751d10-50b1-4ef7-887a-ee69223c7c53_Screenshot%202023-08-16%20at%2012.56.13%20AM.png" alt="Architecture Overview">
+        <div class="header">
+            <h1>Exploring the Art of Architecture</h1>
         </div>
-
+        <div class="imageContainer">
+            <img src="https://storage.googleapis.com/acciojob-open-file-collections/5c751d10-50b1-4ef7-887a-ee69223c7c53_Screenshot%202023-08-16%20at%2012.56.13%20AM.png" alt="Architecture Sample">
+        </div>
         <table>
-			<thead>
-			<tr>
-				<th>Row</th>
-                <th>First Column (Width: 200)</th>
-                <th>Middle Column (Width: 600)</th>
-                <th>Last Column (Width: 200)</th>
-            </tr>
-			</thead>
-			<tbody>
-			<tr>
-				<td>1</td>
-                <td><img src="https://res.cloudinary.com/dzdgpwtox/image/upload/w_450,c_scale,f_auto/v1615660829/final_designs/seller_design_152537/f_20210313184028.png" alt="Column 1 Image"></td>
-                <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum sapien id urna auctor, nec vulputate ligula venenatis.</td>
-                <td><img src="https://res.cloudinary.com/dzdgpwtox/image/upload/w_450,c_scale,f_auto/v1615660829/final_designs/seller_design_152537/f_20210313184028.png" alt="Column 3 Image"></td>
-            </tr>
-			
             <tr>
-				<td>2</td>
-                <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTKiWFpUjJ-3QoYqaU4hFLPgOIp1qH_GohIA&s" alt="Column 1 Image"></td>
-                <td>Suspendisse potenti. Phasellus non diam ac mi consequat luctus. Nulla facilisi.</td>
-                <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTKiWFpUjJ-3QoYqaU4hFLPgOIp1qH_GohIA&s" alt="Column 3 Image"></td>
+                <td class="image-column"><img src="https://via.placeholder.com/200" alt="Architecture Example 1"></td>
+                <td class="text-column">Architecture involves both art and science to design buildings that are functional and aesthetically pleasing.</td>
+                <td class="image-column"><img src="https://via.placeholder.com/200" alt="Architecture Example 2"></td>
             </tr>
-			</tbody>
+            <tr>
+                <td class="image-column"><img src="https://via.placeholder.com/200" alt="Architecture Example 3"></td>
+                <td class="text-column">From ancient wonders to modern skyscrapers, architecture shapes the spaces we live and work in.</td>
+                <td class="image-column"><img src="https://via.placeholder.com/200" alt="Architecture Example 4"></td>
+            </tr>
         </table>
     </div>
     <script type="text/javascript" src="./script.js">
